--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,27 @@
-language: ruby
-cache: bundler
+# Use Travis's cointainer based infrastructure
 sudo: false
-bundler_args: --without kitchen_common kitchen_vagrant
-rvm:
-  - 2.0
-  - 2.1
-  - 2.2
+addons:
+  apt:
+    sources:
+      - chef-current-precise
+    packages:
+      - chefdk
+
+# Don't `bundle install`
+install: echo "skip bundle install"
+
+branches:
+  only:
+    - master
+
+# Ensure we make ChefDK's Ruby the default
+before_script:
+  - eval "$(/opt/chefdk/bin/chef shell-init bash)"
+
 script:
-  - bundle exec foodcritic -f any --tags ~FC003 --tags ~FC015 --tags ~FC023 .
-  - bundle exec rubocop
-  - bundle exec rspec --color --format progress
+  - /opt/chefdk/embedded/bin/chef --version
+  - /opt/chefdk/embedded/bin/cookstyle --version
+  - /opt/chefdk/embedded/bin/cookstyle
+  - /opt/chefdk/embedded/bin/foodcritic --version
+  - /opt/chefdk/embedded/bin/foodcritic . --exclude spec -f any
+  - /opt/chefdk/embedded/bin/rspec
